# imgsort

./: Cargo.toml  Dockerfile  README.md  config.example.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: rust.yml  security-audit.yml
src/: config.rs  conflict_manager.rs  errors.rs  main.rs
src/image/: metadata.rs  mod.rs  rawler.rs  rexif.rs
src/template/: mod.rs  parser.rs  transforms.rs  value.rs
