[package]
name = "imgsort"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
sha2 = "0.10"
human-errors = { version = "0.2.3", features = ["pretty"] }
rawler = "0.7.1"
rexif = "0.7.5"
serde = { version = "1.0.228", features = ["derive", "alloc"] }
toml = "1.0.0"
walkdir = "2.5.0"
base16ct = { version = "1.0.0", features = ["alloc"] }
deunicode = "1.6.2"
colog = "1.4.0"
log = "0.4.29"

[profile.release]
debug = false
strip = "debuginfo"
